[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
name = "nomad-distribution"
description = "nomad distribution template"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[parsing, infrastructure]==1.3.17", 
  "plotly<6.0"
  ]

[project.optional-dependencies]
plugins = [
  "perovskite-solar-cell-database @ git+https://github.com/FAIRmat-NFDI/nomad-perovskite-solar-cells-database.git",
  'nomad-material-processing @ git+https://github.com/FAIRmat-NFDI/nomad-material-processing.git@103-add-specialized-combinatorialsample-schema',
  'nomad-baseclasses @ git+https://github.com/nomad-hzb/nomad-baseclasses.git',
  'nomad-hysprint @ git+https://github.com/nomad-hzb/nomad-hysprint.git',
  'hzb-combinatorial-libraries @ git+https://github.com/nomad-hzb/hzb-combinatorial-libraries-plugin.git',
  'nomad-chemical-energy @ git+https://github.com/nomad-hzb/nomad-chemical-energy.git',
  "nomad-pvcomb @ git+https://codebase.helmholtz.cloud/pvcomb/nomad-pvcomb.git@develop"
]
jupyter = [
'voila',
'ipyaggrid',
'ipyvuetify',
'ipysheet',
'ipydatagrid',
'jupyter-flex',
'ipympl',
#'baybe',
'ipython<9.0',
'pyvis',
'lmfit',
'jupyterlab_h5web',
'jupyterlab>4.0',
'seaborn', 
'jupyterlab-spreadsheet-editor' # 'jupyterhub<5','oauthenticator<16'
]
dev = ["nomad-lab[parsing, infrastructure, dev]==1.3.17"]


[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]


[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
